k8s/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: twjobs
  labels:
    app: twjobs
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
